# marketplace-games

./: .gitignore  package-lock.json
contract/: README.md  build.rs
contract/.github/workflows/: ci.yml
contract/app/: Cargo.toml
contract/app/src/: lib.rs
contract/client/: Cargo.toml  build.rs
contract/client/src/: contract_client.rs
contract/src/: lib.rs
docs/plans/: 2026-04-22-game-results-points-spec.md  2026-04-22-jump-game-architecture.md
frontend/: .env.example  .env.local  Dockerfile  package-lock.json  package.json
frontend/src/: main.tsx  styles.css  vite-env.d.ts
games/2048/contract/: .binpath  Cargo.toml  README.md  build.rs
games/2048/contract/app/: Cargo.toml
games/2048/contract/app/src/: lib.rs
games/2048/contract/client/: Cargo.toml  build.rs  game_2048_contract_client.idl
games/2048/contract/client/src/: game_2048_contract_client.rs  lib.rs
games/2048/contract/src/: lib.rs
games/2048/contract/tests/: gtest.rs
games/2048/frontend/: .dockerignore  .env.example  .env.local  Dockerfile  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
games/2048/frontend/src/: main.tsx  (+2 more)
games/arcade/contract/: Cargo.toml
games/arcade/contract/client/src/: lib.rs
games/arcade/contract/tests/: gtest.rs
games/arcade/frontend/: .env.example  .env.local  index.html  vite.config.ts
games/chicken-riches/contract/: .binpath  Cargo.toml  README.md  build.rs
games/chicken-riches/frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
games/critter-clash/: README.md
games/critter-clash/frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
games/deep-sea-feast/contract/: Cargo.toml  README.md
games/deep-sea-feast/contract/app/: Cargo.toml
games/deep-sea-feast/contract/app/src/: lib.rs
games/deep-sea-feast/contract/client/: Cargo.toml  build.rs
games/deep-sea-feast/contract/client/src/: deep_sea_feast_contract_client.rs  lib.rs
games/deep-sea-feast/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
games/lumberjack/contract/: Cargo.toml  README.md  build.rs
games/lumberjack/contract/app/: Cargo.toml
games/lumberjack/contract/app/src/: lib.rs
games/lumberjack/contract/client/: Cargo.toml  build.rs  lumberjack_contract_client.idl
games/lumberjack/contract/client/src/: lib.rs  lumberjack_contract_client.rs
games/lumberjack/contract/src/: lib.rs
games/lumberjack/contract/tests/: gtest.rs
games/lumberjack/frontend/: .env.example  index.html  package.json  vite.config.ts
games/nebula-blaster/: nebula-blaster-spec.md  package-lock.json
games/nebula-blaster/contract/: .binpath  Cargo.toml
games/nebula-blaster/contract/app/src/: lib.rs
games/nebula-blaster/contract/client/: nebula_blaster_client.idl
games/nebula-blaster/contract/tests/: gtest.rs
games/nebula-blaster/frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
games/robo-miner/: README.md
games/robo-miner/contract/: Cargo.toml  LICENSE  README.md  build.rs  deploy.mjs  deployment.json
games/robo-miner/contract/app/: Cargo.toml
games/robo-miner/contract/app/src/: lib.rs
games/robo-miner/contract/client/: Cargo.toml  build.rs
games/robo-miner/contract/client/src/: lib.rs
games/robo-miner/contract/src/: lib.rs
games/robo-miner/contract/tests/: gtest.rs
games/robo-miner/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
games/robo-save-eny/: README.md
games/robo-save-eny/contract/: .gitignore  Cargo.toml  build.rs
games/robo-save-eny/contract/app/: Cargo.toml
games/robo-save-eny/contract/app/src/: lib.rs
games/robo-save-eny/contract/client/: Cargo.toml  build.rs
games/robo-save-eny/contract/client/src/: lib.rs  robo_save_eny_contract_client.rs
games/robo-save-eny/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
games/zombie-apocalypse-survival/: .gitignore
games/zombie-apocalypse-survival/contract/: Cargo.toml  build.rs
games/zombie-apocalypse-survival/contract/app/: Cargo.toml
games/zombie-apocalypse-survival/contract/app/src/: lib.rs
games/zombie-apocalypse-survival/contract/client/: Cargo.toml  build.rs
games/zombie-apocalypse-survival/contract/client/src/: lib.rs  zombie_apocalypse_survival_contract_client.rs
games/zombie-apocalypse-survival/frontend/: Dockerfile  index.html  package-lock.json  package.json
platform/: package-lock.json  package.json
platform/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
platform/frontend/src/: main.tsx  styles.css  vite-env.d.ts  wallet-runtime.tsx
voucher-backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
voucher-backend/src/: app.module.ts  data-source.ts  main.ts  seed.ts
voucher-backend/src/catalog/: games.json
voucher-backend/src/config/: configuration.ts
voucher-backend/src/entities/: arcade-game-vote.entity.ts  arcade-game.entity.ts  voucher.entity.ts
voucher-backend/src/games/: games.controller.ts  games.module.ts  games.service.ts
voucher-backend/src/gasless/: gasless.controller.ts  gasless.module.ts  gasless.service.spec.ts  gasless.service.ts  voucher.service.spec.ts  voucher.service.ts  voucher.task.spec.ts  voucher.task.ts
voucher-backend/src/migrations/: 20260423000100-InitialVoucherSchema.ts  20260423000200-AddArcadeGameCatalog.ts  20260424133000-EnableLumberjackGasless.ts  20260427113000-EnableVaraGameGasless.ts  20260427150000-Enable2048Gasless.ts  20260427154000-Publish2048Game.ts  20260427181000-EnableNebulaBlasterGasless.ts  20260429112000-EnableDeepSeaFeastGasless.ts  20260429154500-SetDeepSeaFeastImage.ts  20260429190500-SetDeepSeaFeastFrontendUrl.ts  20260429194000-PublishDeepSeaFeastGame.ts  20260429213000-AddArcadeGameVotes.ts  20260429224500-ResetLumberjackAndSkyboundVotes.ts  20260430103000-SetRoboMinerFrontendUrl.ts  20260430153000-EnableChickenRichesGasless.ts  20260501120000-EnableZombieApocalypseSurvivalGasless.ts  (+1 more)
(+199 files in other folders)
