[package]
name = "contract"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
contract-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
contract-app.workspace = true
contract-client.workspace = true
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
contract-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/contract"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "=0.10.2"
sails-client-gen = "=0.10.2"
sails-idl-gen = "=0.10.2"
gstd = "=1.10.0"
gtest = "=1.10.0"
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
tokio = "1.50.0"
contract-app = { version = "0.1.0", path = "app" }
contract-client = { version = "0.1.0", path = "client" }
