[package]
name = "robo-miner-profile"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
robo-miner-profile-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
robo-miner-profile-app.workspace = true
robo-miner-profile-client.workspace = true
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
robo-miner-profile-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/robo-miner-profile"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.3"
tokio = "1.48.0"
robo-miner-profile-app = { version = "0.1.0", path = "app" }
robo-miner-profile-client = { version = "0.1.0", path = "client" }
