[package]
name = "game-2048-contract-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the 2048 contract"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
game-2048-contract-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
