[package]
name = "deep-sea-feast-contract-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the Deep Sea Feast contract"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
deep-sea-feast-contract-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
