[package]
name = "robo-save-eny-contract-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the Robo. Save Eny! contract"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
robo-save-eny-contract-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
