[package]
name = "zombie-apocalypse-survival-contract-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing Zombie Apocalypse Survival contract business logic"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
scale-info.workspace = true
