[package]
name = "zombie-apocalypse-survival-contract-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for Zombie Apocalypse Survival contract"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
zombie-apocalypse-survival-contract-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
